# neardevhub-treasury-dashboard

./: .env  .gitignore  .prettierignore  1click-implementation-plan.md  GEMINI_PR_REVIEW_PROCESS.md  README.md  build.js  dao-proposal.json  eslint.config.js  package-lock.json  package.json  playwright-video-merger.sh  playwright.config.js
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build_sandbox.yml  deploy-jsinrust-contract.yml  deploy-prod-mainnet.yml  deploy-treasury-factory-contract.yml  deploy-web4-contract.yml  dry-run.yml  install-dependencies.yml  playwright_asset_exchange.yml  playwright_dashboard.yml  playwright_intents.yml  playwright_lockup.yml  playwright_payments.yml  playwright_settings.yml  playwright_stake_delegation.yml  playwright_system_updates.yml  playwright_treasury_factory.yml  playwright_web4.yml  prepare.yml  production-dry-run.yml  release-instances.yml  release-production.yml  release-staging.yml  sanity_checks.yml  staging-dry-run.yml  test-pipeline.yml  test-treasury-factory-contract.yml  test-web4-contract.yml  test-web4.contract.yml  test.yml
.github/workflows_disabled/: playwright_system_updates.yml  staging-dry-run.yml  test-pipeline.yml
.husky/: pre-commit
assetlogos/: fetchassetlogos-web3icons.js  fetchassetlogos.js
docs/: README.md
docs/developer/: intents.md  system-updates.md  testing-components.md  ui-component-library.md
docs/nearintents/: NEAR_Intents_Documentation_Summary.md  NEAR_Intents_Quick_Reference.md  NEAR_Intents_Screenshot_Gallery.md  NEAR_Intents_Technical_Documentation.md  NEAR_Intents_User_Guide.md  README.md
instances/bootstrap.treasury-factory.near/: aliases.mainnet.json  bos.config.json  data.json
instances/test-bootstrap.treasury-factory.near/: aliases.mainnet.json  bos.config.json  data.json  src  widget
instances/test-widgets.treasury-factory.near/: aliases.mainnet.json  bos.config.json  data.json  src  widget
instances/treasury-devdao.near/: aliases.mainnet.json  (+2 more)
sandboxrpc/: Cargo.toml  README.md  sandboxrpcplayground.js
sandboxrpc/playground/: failed_ft_transfer.js  proposals.js  staking.js  treasuryfactory.js
sandboxrpc/src/: main.rs
scripts/: create-static-hosting-web-gateway-folder.mjs  dev-gateway.js  watch.js
treasury-factory/: .gitignore  Cargo.toml  README.md  build.rs  min_self_upgrade_contract.wat
web4/: .gitignore  README-Minimal-Service-Worker.md  contract.js  createdeployargs.js  createrustcontractbundle.js  deploy.js  deploy.sh  dev-gateway.js  index.html.js  minimal-service-worker.js
web4/treasury-web4/: .gitignore  Cargo.toml  README.md  build.rs
web4/treasury-web4/src/: external.rs  lib.rs
web4/treasury-web4/src/web4/: index.html  main.js  service-worker.js
web4/treasury-web4/tests/: test_basics.rs  test_service_worker_html.rs  test_upgrade.rs  web4_utils.rs
(+462 files in other folders)
