[package]
name = "sandboxrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = { version = "5.17.0", features = ["global-contracts"] }
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11" }
near-api = { version = "0.6.1", default-features = false, features = ["workspaces"] }
near-workspaces = { version = "0.21.0", features = ["unstable"] }
serde_json = "1.0.134"

[dev-dependencies]
near-sdk = { version = "5.17.0", features = ["unit-testing", "global-contracts"] }
